# iot_project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_app.sh
app/: list_main.c  sort_alg_main.c
